# panduza-rust

./: ASYNC_CALLBACKS_README.md  Cargo.toml  README.md  benchmark_config.json  client_certificate.pem  client_private_key.pem  config_zenoh.json5  minica.pem  reactor.drawio
.github/workflows/: build-binaries.yml  test-tag.yml
credentials/certificates/: bad_client_certificate.pem  default_certificate.pem  expired_client_certificate.pem  logger_certificate.pem  root_ca_certificate.pem  writer_certificate.pem
credentials/keys/: bad_client_private_key.pem  default_private_key.pem  expired_client_private_key.pem  logger_private_key.pem  root_ca_private_key.pem  writer_private_key.pem
examples/: simple_async_demo.rs
features/: mqtt_connection.feature
lib/panduza-proc/: Cargo.toml
lib/panduza-proc/src/: lib.rs
req/: coding_rules.req.md  panduza_topics.req.md
src/: asyncv.rs  attribute.rs  attribute_builder.rs  attribute_metadata.rs  attribute_mode.rs  benchmark_config.rs  boolean_attribute.rs  bytes_attribute.rs  common.rs  config.req.md  config.rs  connection.req.md  connection.rs  executor.req.md  executor.rs  fbs.rs  instance_state.rs  json_attribute.rs  lib.rs  number_attribute.rs  path.req.md  path.rs  pubsub.rs  pubsub_zenoh.rs  reactor.req.md  reactor.rs  router.rs  session.rs  string_attribute.rs  structure.rs  syncv.rs  task_monitor.rs  topic.rs
src/asyncv/: attribute.rs  builder.rs  msg.rs  reactor.rs
src/asyncv/attribute/: message.rs
src/asyncv/msg/: att.rs  att_bool.rs  core_members.rs
src/asyncv/reactor/: message_engine.rs  reactor_core.rs  reactor_data.rs  router.rs
src/attribute/: async_generic.rs  boolean.rs  bytes.rs  data_pack.rs  generic.rs  json.rs  notification.rs  number.rs  ro_stream.rs  si.rs  status.rs  std_msg.rs  std_obj.rs  string.rs  structure.req.md  structure.rs
src/attribute/notification/: notification_pack.rs
src/attribute/structure/: flat.req.md  flat.rs
src/common/: error.rs  message.rs  pza_topic.rs  reactor_settings.rs
src/common/message/: boolean.rs
src/examples/: async_callbacks_example.rs  benchmark_big.rs  benchmark_multiple.rs  mod.rs  serial_client.rs  test_async.rs  test_cb.rs  test_sync.rs  test_zenoh.rs
src/fbs/: boolean_buffer.rs  bytes_buffer.rs  common.rs  generic.rs  notification_buffer.rs  notification_v0.rs  number.rs  number_buffer.rs  other.fbs  panduza.fbs  panduza_generated.rs  sample.rs  status_buffer.rs  status_v0.rs  string_buffer.rs  structure_buffer.rs  trigger_v0.rs  vector_f32_v0.rs
src/fbs/notification_buffer/: notification_type.rs
src/fbs/notification_v0/: notification_v0_generated.rs
src/fbs/sample/: sample.fbs  sample_generated.rs
src/fbs/structure_buffer/: buffer.rs  (+6 more)
src/pubsub/: mqtt.rs  zenoh.rs
src/pubsub_zenoh/: zenoh_ps.rs
src/reactor/: builder.req.md  builder.rs
src/security/: certificate.rs  mod.rs  utils.rs
src/syncv/: reactor.rs
src/tests/: driver_tcp.rs
tests/: basics.rs  basics_focus.rs  free_run.rs  mqtt_connection.rs  security.rs
tests/pza_world/: mod.rs  panduza_world.rs  steps.rs
tests/worlds/: basics_world.rs  boolean.rs  mod.rs  security_world.rs
(+48 files in other folders)
