[package]
name = "panduza"
version = "0.0.2"
edition = "2021"

[[test]]
name = "basics"
harness = false

[[test]]
name = "security"
harness = false

[[test]]
name = "basics_focus"
harness = false

[[test]]
name = "free_run"
harness = false

[dependencies]

# Main async framework for the platform
tokio = { version = "1.45.1", features = ["full"] }
# Base for serde
serde = { version = "1.0", features = ["derive"] }
# Json serialization & deserialization
serde_json = "1.0.114"
# Bytes zero copy mangement
bytes = "1.10.1"
# 
monitor = "0.1.0"
# 
thiserror = "1.0.63"
# 
futures = "0.3.30"
# 
async-trait = "0.1.81"
# 
rand = "0.8.5"
#
flatbuffers = "25.2.10"
# 
yash-fnmatch = "1.1.2"
# 
zenoh = { version = "1.4.0" }
#
rcgen = { version = "0.13.2", features = ["pem", "x509-parser"] }
#
time = "0.3.41"
#
dirs = "6.0.0"


[dev-dependencies]

# Test framework for async code
cucumber = { version = "0.21.1", features = ["tracing", "timestamps"] }
#
futures = "0.3"
# 
config = "0.14.0"
